додав інші сторінки. Використав метод createReadStream і pipe

--- a/www/about.html
+++ b/www/about.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-
     <style>
       body {
         color: #fff;
@@ -16,9 +15,8 @@
       }
     </style>
   </head>
-
   <body>
-    <h1>Hello, Node Js!</h1>
-    <a href="/about">Go to about</a>
+    <h1>About</h1>
+    <a href="/">Go to main</a>
   </body>
 </html>
